change db to merge with selling honda
