# routes/customer.route.ts
@@ -1,8 +1,0 @@
-import express, { Router } from "express";
-const router: Router = express.Router();
-
-import { customerDetail } from "../controllers/customer.controller";
-
-router.get("/:id", customerDetail);
-
-export default router;
