# routes/staff.route.ts
@@ -1,8 +1,0 @@
-import express, { Router } from "express";
-const router: Router = express.Router();
-
-import { staffDetail } from "../controllers/staff.controller";
-
-router.get("/:id", staffDetail);
-
-export default router;
