# swagger.json
@@ -17,14 +17,6 @@
   ],
   "tags": [
     {
-      "name": "Khách hàng",
-      "description": "User management APIs"
-    },
-    {
-      "name": "Nhân viên",
-      "description": "Staff management APIs"
-    },
-    {
       "name": "Đơn hàng",
       "description": "Order management APIs"
     },
@@ -164,61 +156,6 @@
         }
       }
     },
-    "/customers/{id}": {
-      "get": {
-        "tags": ["Khách hàng"],
-        "summary": "Lấy chi tiết khách hàng theo ID",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": {}
-          },
-          "404": {
-            "description": "Customer not found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/staffs/{id}": {
-      "get": {
-        "tags": ["Nhân viên"],
-        "summary": "Lấy chi tiết nhân viên theo ID",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "default": "64a1b2c3d4e5f67890abcdef"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": {}
-          },
-          "404": {
-            "description": "Staff not found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
     "/auth/sign-in": {
       "post": {
         "tags": ["Auth"],
@@ -327,6 +264,34 @@
             }
           }
         },
+        "responses": {
+          "200": {
+            "description": {}
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/auth/sign-out": {
+      "post": {
+        "tags": ["Auth"],
+        "summary": "Đăng xuất người dùng",
+        "parameters": [
+          {
+            "name": "token",
+            "in": "cookie",
+            "required": true,
+            "description": "Cookie chứa token xác thực của người dùng",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": {}
